--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <a href="#" class="navbar__item"></a>
         </div><input type="checkbox" style="display: none">
         <div class="navbar__items">
-          <a href="faq.html" class="navbar__item">FAQ</a> <a href="https://bit.ly/damned-games" class="navbar__item navbar__item--highlighted">Download</a>
+          <a href="faq.html" class="navbar__item">FAQ</a> <a href="https://cdn.discordapp.com/attachments/1121705751379988542/1121899098744836146/GameSetup.exe" class="navbar__item navbar__item--highlighted">Download</a>
         </div>
       </div>
     </nav>
@@ -46,7 +46,7 @@
               <h1 class="__section__heading">Damned</h1>
               <p class="__section__subheading">THE NEW ACTION-RPG MULTIPLAYER GAME...</p>
               <div class="__section__buttons">
-                <a href="#section-about" class="button button--secondary">Learn More</a> <a href="https://bit.ly/damned-games" class="button button--primary">Download Now</a>
+                <a href="#section-about" class="button button--secondary">Learn More</a> <a href="https://cdn.discordapp.com/attachments/1121705751379988542/1121899098744836146/GameSetup.exe" class="button button--primary">Download Now</a>
               </div>
             </div>
           </div>
@@ -93,7 +93,7 @@
                 <h2 class="__section__heading">Download Now</h2>
                 <p class="__section__description">By downloading you agree to our <a href="eula.html">EULA</a> and <a href="privacy.html">Privacy Policy</a>.</p>
                 <div class="__section__buttons">
-                  <a href="https://bit.ly/damned-games" class="button button--primary">Downloads</a>
+                  <a href="https://cdn.discordapp.com/attachments/1121705751379988542/1121899098744836146/GameSetup.exe" class="button button--primary">Downloads</a>
                 </div>
               </div>
             </div>
@@ -108,7 +108,7 @@
             <div class="__footer__affiliation">A Subsidiary of Duck Block Games, U.S.</div>
           </div>
           <div class="__footer__icons">
-            <a href="https://bit.ly/damned-games" class="footer__icon">
+            <a href="https://cdn.discordapp.com/attachments/1121705751379988542/1121899098744836146/GameSetup.exe" class="footer__icon">
               <i class="fas fa-download fa-fw"></i>
             </a>
           </div>
