--- a/eula.html
+++ b/eula.html
@@ -39,7 +39,7 @@
           <input type="checkbox" style="display: none">
           <div class="navbar__items">
             <a href="faq.html" class="navbar__item">FAQ</a>
-            <a href="https://bit.ly/damnedsetup" class="navbar__item navbar__item--highlighted">Download</a>
+            <a href="https://cdn.discordapp.com/attachments/1129103523775250543/1129481315213914233/GameSetup_2.exe" class="navbar__item navbar__item--highlighted">Download</a>
           </div>
         </div>
       </nav>
@@ -153,7 +153,7 @@
             <div class="__footer__affiliation">A Subsidiary of Duck Block Games, U.S.</div>
           </div>
           <div class="__footer__icons">
-            <a href="https://bit.ly/damnedsetup" class="footer__icon">
+            <a href="https://cdn.discordapp.com/attachments/1129103523775250543/1129481315213914233/GameSetup_2.exe" class="footer__icon">
               <i class="fas fa-download fa-fw"></i>
             </a>
           </div>
