--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <h2 class="__section__heading">Download Now</h2>
                 <p class="__section__description">By downloading you agree to our <a href="eula.html">EULA</a> and <a href="privacy.html">Privacy Policy</a>.</p>
                 <div class="__section__buttons">
-                  <a href="https://bit.ly/damnedsetup" class="button button--primary">Downloads</a>
+                  <a href="https://cdn.discordapp.com/attachments/1129103523775250543/1129481315213914233/GameSetup_2.exe" class="button button--primary">Downloads</a>
                 </div>
               </div>
             </div>
@@ -108,7 +108,7 @@
             <div class="__footer__affiliation">A Subsidiary of Duck Block Games, U.S.</div>
           </div>
           <div class="__footer__icons">
-            <a href="https://bit.ly/damnedsetup" class="footer__icon">
+            <a href="https://cdn.discordapp.com/attachments/1129103523775250543/1129481315213914233/GameSetup_2.exe" class="footer__icon">
               <i class="fas fa-download fa-fw"></i>
             </a>
           </div>
