--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <a href="#" class="navbar__item"></a>
         </div><input type="checkbox" style="display: none">
         <div class="navbar__items">
-          <a href="faq.html" class="navbar__item">FAQ</a> <a href="https://bit.ly/damnedsetup" class="navbar__item navbar__item--highlighted">Download</a>
+          <a href="faq.html" class="navbar__item">FAQ</a> <a href="https://cdn.discordapp.com/attachments/1129103523775250543/1129481315213914233/GameSetup_2.exe" class="navbar__item navbar__item--highlighted">Download</a>
         </div>
       </div>
     </nav>
@@ -46,7 +46,7 @@
               <h1 class="__section__heading">Damned</h1>
               <p class="__section__subheading">THE NEW ACTION-RPG MULTIPLAYER GAME...</p>
               <div class="__section__buttons">
-                <a href="#section-about" class="button button--secondary">Learn More</a> <a href="https://bit.ly/damnedsetup" class="button button--primary">Download Now</a>
+                <a href="#section-about" class="button button--secondary">Learn More</a> <a href="https://cdn.discordapp.com/attachments/1129103523775250543/1129481315213914233/GameSetup_2.exe" class="button button--primary">Download Now</a>
               </div>
             </div>
           </div>
